whats app links

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <!--HEADER  -->
         <header>
-            <div id="info" class="d-flex justify-content-between p-1">
-                <div>
+            <div id="info" class="d-flex justify-content-between p-1 text-center">
+                <div class="">
                     <a class="fb-ic" href="https://www.facebook.com/colegioanglolzc/" target="_blank">
                         <i class="fab fa-facebook-f fa-s white-text mr-md-4 mr-3 fa-1x"></i>
                     </a>
@@ -39,9 +39,9 @@
                     <a href="https://anglo.algebraix.com/" target="_blank">
                         <i class="fas fa-desktop fa-s white-text mr-md-2 mr-3 fa-1x "></i><small>Algebraix</small> </a>
                 </div>
-                <div>
+                <div class="">
                     <div class="text-center px-3">
-                    Escribenos<a href="https://wa.link/xr1quy"><i class="fab fa-whatsapp mx-2"></i></a><a href="tel:+524431283102"><small>753-119-62-82</small></a>
+                    <a href="https://wa.link/xr1quy"><i class="fab fa-whatsapp mx-2"></i></a><a href="tel:+524431283102"><small>753-119-62-82</small></a>
                     </div>
                 </div>
             </div>
@@ -350,8 +350,9 @@
                     (753) 537 7275 | 
                     (753) 537 1210
                 <div>
+                    
                     <div class="text-center px-3">
-                        <i class="fab fa-whatsapp"></i> 753-119-62-82
+                        <a href="https://wa.link/xr1quy"><i class="fab fa-whatsapp mx-2 text-white"></i></a>753 119 62 82
                     </div>
                 </div>
                 </div>
