--- a/inscripciones.html
+++ b/inscripciones.html
@@ -19,69 +19,91 @@
 <body>
   <!--HEADER  --> 
   <header>
-    <div id="info" class="d-flex justify-content-between p-1">
-      <div>
-        <a class="fb-ic" href="https://www.facebook.com/colegioanglolzc/">
-          <i class="fab fa-facebook-f fa-s white-text mr-md-4 mr-3 fa-1x"></i>
-        </a>
-        <a class="fb-ic" href="https://www.instagram.com/colegioanglolzc/">
-          <i class="fab fa-instagram fa-s white-text mr-md-4 mr-3 fa-1x"></i>
-        </a>
-        <a class="fb-ic" href="https://twitter.com/MXanglo">
-          <i class="fab fa-twitter-square fa-s white-text mr-md-4 mr-3 fa-1x"></i>
-        </a>
-        <a class="fb-ic" href="https://www.youtube.com/channel/UCN3pK19VnqY9pU1OlUkNBxw">
-          <i class="fab fa-youtube fa-s white-text mr-md-4 mr-3 fa-1x"></i>
-        </a>
-      </div>
-      <div>
-        <a href="https://anglo.algebraix.com/" target="_blank">
-            <i class="fas fa-desktop fa-s white-text mr-md-2 mr-3 fa-1x "></i><small>Algebraix</small> </a>
-    </div>
-    <div>
-        <div class="text-center px-3">
-        <i class="fab fa-whatsapp"></i><a href=""><small>753-119-62-82</small></a> 
+    <div id="info" class="d-flex justify-content-between p-1 text-center">
+        <div class="">
+            <a class="fb-ic" href="https://www.facebook.com/colegioanglolzc/" target="_blank">
+                <i class="fab fa-facebook-f fa-s white-text mr-md-4 mr-3 fa-1x"></i>
+            </a>
+            <a class="fb-ic" href="https://www.instagram.com/colegioanglolzc/" target="_blank">
+                <i class="fab fa-instagram fa-s white-text mr-md-4 mr-3 fa-1x"></i>
+            </a>
+            <a class="fb-ic" href="https://twitter.com/MXanglo" target="_blank">
+                <i class="fab fa-twitter-square fa-s white-text mr-md-4 mr-3 fa-1x"></i>
+            </a>
+            <a class="fb-ic" href="https://www.youtube.com/channel/UCN3pK19VnqY9pU1OlUkNBxw" target="_blank">
+                <i class="fab fa-youtube fa-s white-text mr-md-4 mr-3 fa-1x"></i>
+            </a>
+        </div>
+        <div>
+            <a href="https://anglo.algebraix.com/" target="_blank">
+                <i class="fas fa-desktop fa-s white-text mr-md-2 mr-3 fa-1x "></i><small>Algebraix</small> </a>
+        </div>
+        <div class="">
+            <div class="text-center px-3">
+            <a href="https://wa.link/xr1quy"><i class="fab fa-whatsapp mx-2"></i></a><a href="tel:+524431283102"><small>753-119-62-82</small></a>
+            </div>
         </div>
     </div>
-    </div>
     <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">
-        <img src="images/logoangloblanco.png" alt="" id="imagenheader">
-        COLEGIO ANGLO
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="somos.html">Quiénes somos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="modelo.html">Modelo Educativo</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="campus.html">Campus</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Oferta Educativa
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logoangloblanco.png" alt="" id="imagenheader">
+                COLEGIO ANGLO
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="prekinder.html">PreKinder</a>
-              <a class="dropdown-item" href="kindergarten.html">Kindergarten</a>
-              <a class="dropdown-item" href="primaria.html">Primaria</a>
-              <a class="dropdown-item" href="secundaria.html">Secundaria</a>
-              <a class="dropdown-item" href="bachillerato.html">Bachillerato</a>
-            </div>
-          </li>
-        </ul>
-      </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">INICIO</a>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        CONÓCENOS
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="somos.html">QUIÉNES SOMOS</a>
+                        <a class="dropdown-item" href="modelo.html">MODELO EDUCATIVO</a>
+                        <a class="dropdown-item" href="campus.html">CAMPUS</a>
+                    </div>
+                </li>
+
+                <!-- <li class="nav-item active">
+                    <a class="nav-link" href="somos.html">Quiénes somos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="modelo.html">Modelo Educativo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="campus.html">Campus</a>
+                </li> -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        OFERTA EDUCATIVA
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="prekinder.html">PREKINDER</a>
+                        <a class="dropdown-item" href="kindergarten.html">KINDERGARTEN</a>
+                        <a class="dropdown-item" href="primaria.html">PRIMARIA</a>
+                        <a class="dropdown-item" href="secundaria.html">SECUNDARIA</a>
+                        <a class="dropdown-item" href="bachillerato.html">BACHILLERATO</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="inscripciones.html">INSCRIPCIONES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="etiquetas.html">RECURSOS</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-  </header>
+</header>
   <!-- HEADER-->
 
 <div class="text-center mt-5 mb-3">
