--- a/inscripciones.html
+++ b/inscripciones.html
@@ -103,68 +103,44 @@
             </ul>
         </div>
     </nav>
-</header>
+  </header>
   <!-- HEADER-->
 
-<div class="text-center mt-5 mb-3">
-  <h1 class="text-center">Etiquetas Colegio Anglo</h1>
-  <small>Aquí encuentras las etiquetas para el nivel correspondiente.</small>
-</div>
-  
-
-
-</div>
-<div class="container">
-<div class="row">
-  <div class="col-sm-6">
-    <div class="card">
-        <!-- <img src="images/anglokinder4.jpg" class="card-img-top" alt="..." style="max-width 50%;"> -->
-      <div class="card-body">
-        <h5 class="card-title">KINDERGARTEN</h5>
-        <p class="card-text text-justify">Descarga las etiquetas que tus pequeños utilizan para identificar su portafolio de evidencias IB, sus libretas y libros de este ciclo escolar.</p>
-        <a href="etiquetas/MUESTRADECARPETADEEVIDENCIAS.pdf" class="btn btn-primary btn-lg btn-block" target="_blank" download="DEMO_PORTAFOLIO">Descargar DEMO PORTAFOLIO</a>
-        <a href="etiquetas/KINDERGARTENETIQUETASPORTAFOLIOACTETIQUETASLIBRO-LIBRETA_20192020.docx" class="btn btn-primary btn-lg btn-block" target="_blank" download="KINDERGARTEN_ETIQUETAS">Descargar</a>
-      </div>
-    </div>
+  <div class="text-center mt-5 mb-3">
+    <h1 class="text-center">Etiquetas Colegio Anglo</h1>
+    <small>Aquí encuentras las etiquetas para el nivel correspondiente.</small>
   </div>
-  <div class="col-sm-6 ">
-    <div class="card">
-        <!-- <img src="images/anglokinder4.jpg" class="card-img-top " alt="..."> -->
-      <div class="card-body">
-        <h5 class="card-title">PRIMARIA</h5>
-        <p class="card-text text-justify">Descarga e identifica los libros, cuadernos y portafolio de evidencias IB que tus pequeños llevarán este ciclo escolar.</p>
-        <a href="etiquetas/MUESTRADECARPETADEEVIDENCIAS.pdf" class="btn btn-primary btn-lg btn-block" target="_blank" download="DEMO_PORTAFOLIO">Descargar DEMO PORTAFOLIO</a>
-        <a href="etiquetas/PRIMARIA_ETIQUETASANGLOLIBRO_LIBRETA_PORTAFOLIO_2019_2020.doc" class="btn btn-primary btn-lg btn-block" target="_blank" download="PRIMARIA_ETIQUETAS">Descargar</a>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="row mb-4">
-    <div class="col-sm-6">
-      <div class="card">
-          <!-- <img src="images/anglokinder4.jpg" class="card-img-top" alt="..." style="max-width 50%;"> -->
+
+
+  <div class="container">
+    <div class="row">
+      <div class="card mx-5" style="width: 18rem;">
+        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">SECUNDARIA</h5>
-          <p class="card-text text-justify">Descarga las etiquetas de nivel Secundaria para identificar cuadernos, libros y materiales de los jóvenes. <br></p>
-          <a href="etiquetas/SECUNDARIA_LOGO_LIBRETA 19-20.doc" class="btn btn-primary btn-lg btn-block" target="_blank" download="SECUNDARIA_ETIQUETAS">Descargar</a>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
-    </div>
-    <div class="col-sm-6 ">
-      <div class="card">
-          <!-- <img src="images/anglokinder4.jpg" class="card-img-top " alt="..."> -->
+      <div class="card mx-5" style="width: 18rem;">
+        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">BACHILLERATO</h5>
-          <p class="card-text text-justify">Descarga las etiquetas de nivel Bachillerato para identificar cuadernos, libros y materiales de los jóvenes. <br></p>
-          <a href="etiquetas/BACHILLERATO_ETIQUETAS.docx" class="btn btn-primary btn-lg btn-block" target="_blank" download="BACHILLERATO_ETIQUETAS">Descargar</a>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+      <div class="card mx-5" style="width: 18rem;">
+        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+      <div class="card mx-5" style="width: 18rem;">
+        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
     </div>
   </div>
-</div>
-
-
   <!--Extensiones niveles-->
   <div id="nav" class="nav pt-3">
     <div class="container">
