--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!--HEADER  -->
         <header>
-            <div id="info" class="d-flex justify-content-between p-1 text-center">
+            <div id="info" class="text-center">
                 <div class="">
                     <a class="fb-ic" href="https://www.facebook.com/colegioanglolzc/" target="_blank">
                         <i class="fab fa-facebook-f fa-s white-text mr-md-4 mr-3 fa-1x"></i>
@@ -28,21 +28,19 @@
                     <a class="fb-ic" href="https://www.instagram.com/colegioanglolzc/" target="_blank">
                         <i class="fab fa-instagram fa-s white-text mr-md-4 mr-3 fa-1x"></i>
                     </a>
+                    <a class="fb-ic" href="https://www.youtube.com/channel/UCN3pK19VnqY9pU1OlUkNBxw" target="_blank">
+                        <i class="fab fa-youtube fa-s white-text mr-md-4 mr-3 fa-1x"></i>
                     <a class="fb-ic" href="https://twitter.com/MXanglo" target="_blank">
                         <i class="fab fa-twitter-square fa-s white-text mr-md-4 mr-3 fa-1x"></i>
                     </a>
-                    <a class="fb-ic" href="https://www.youtube.com/channel/UCN3pK19VnqY9pU1OlUkNBxw" target="_blank">
-                        <i class="fab fa-youtube fa-s white-text mr-md-4 mr-3 fa-1x"></i>
                     </a>
-                </div>
-                <div>
+                    <a href="https://wa.link/xr1quy"><i class="fab fa-whatsapp mx-2 mr-md-4 mr-3 fa-1x">
+                        </i></a>
+                    <a href="tel:+524431283102"><small></small></a>
                     <a href="https://anglo.algebraix.com/" target="_blank">
-                        <i class="fas fa-desktop fa-s white-text mr-md-2 mr-3 fa-1x "></i><small>Algebraix</small> </a>
-                </div>
-                <div class="">
-                    <div class="text-center px-3">
-                    <a href="https://wa.link/xr1quy"><i class="fab fa-whatsapp mx-2"></i></a><a href="tel:+524431283102"><small>753-119-62-82</small></a>
-                    </div>
+                        <i class="fas fa-desktop fa-s white-text mr-md-2 mr-3 fa-1x "></i><small>Algebraix</small> 
+                    </a>
+
                 </div>
             </div>
             <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
