--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--HEADER  -->
         <header>
             <div id="info" class="text-center">
-                <div class="">
+                <div class="p-1">
                     <a class="fb-ic" href="https://www.facebook.com/colegioanglolzc/" target="_blank">
                         <i class="fab fa-facebook-f fa-s white-text mr-md-4 mr-3 fa-1x"></i>
                     </a>
@@ -43,9 +43,9 @@
 
                 </div>
             </div>
-            <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark py-2">
                     <a class="navbar-brand" href="index.html">
-                        <img src="images/logoangloblanco.png" alt="" id="imagenheader">
+                        <img src="images/colegioanglologo.png" alt="" id="imagenheader" class=" mx-2">
                         COLEGIO ANGLO
                     </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -70,16 +70,6 @@
                                 <a class="dropdown-item" href="campus.html">CAMPUS</a>
                             </div>
                         </li>
-
-                        <!-- <li class="nav-item active">
-                            <a class="nav-link" href="somos.html">Quiénes somos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="modelo.html">Modelo Educativo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="campus.html">Campus</a>
-                        </li> -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
@@ -201,22 +191,6 @@
     </div>
     </div>
     <!--Algebraix-->
-
-    <div class="container my-4 py-4">
-            <h1 class="m-0 p-0 text-center">Etiquetas Ciclo escolar 2019 - 2020</h1> 
-            <!-- <p class="text-center mb-3 p-0">Ayuda y apoyo con el corazón</p> -->
-        <div class="row justify-content-center">
-            <div class="col-12 col-md-6 mb-2 text-center">
-                <p class="pt-3 text-justify">Descarga las plantillas para libretas, libros, materiales, de acuerdo al nivel correspondiente de los alumnos.</p>
-                <a href="etiquetas.html" target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block mt-2 mb-4">Ir a las etiquetas</button></a> 
-    
-            </div>
-            <!-- <div class="col-12 col-md-6 mb-3 d-flex align-items-center d-flex justify-content-center">
-                <img src="images/Algebraix.png" alt="" class="img-fluid rounded-sm" width="75%">
-            </div> -->
-        </div>
-        </div>
-        <!--Algebraix-->
 
     <!--Texto Alianzas-->
         <section id="texto-alianzas">
