cambio de imagenes hero

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
             <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/daniela3.png" class="d-block w-100" alt="anglo foto">
+                        <img src="images/preparatoria.webp" class="d-block w-100" alt="anglo foto">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/emiliano4.png" class="d-block w-100" alt="anglo foto">
+                        <img src="images/primaria2.webp" class="d-block w-100" alt="anglo foto">
                     </div>
                     <div class="carousel-item">
                         <img src="images/preparatoria.webp" class="d-block w-100" alt="anglo foto">
