--- a/campus.html
+++ b/campus.html
@@ -111,53 +111,78 @@
 <!--main-->
     <section id="main">
         <div class="container">
-            <div class="row pb-5 pt-5">
-                <div class="col-12 col-lg-6 text-left align-self-center">
-                    <div class=" text-uppercase">
+            <div class="row pt-5 d-flex align-items-center">
+                <div class="col-12 col-lg-6">
+                    <div class=" text-uppercase mb-5">
                         <h2>Nuestras instalaciones</h2>
                         <small>El Colegio se encuentra ubicado en una zona residencial céntrica, dentro de una extensión
                             de dos hectáreas que albergan
-                            Kindergarten, Primaria, Secundaria y Bachillerato</small>
+                            Kindergarten, Primaria, Secundaria y Bachillerato.</small>
                     </div>
-                    <div>
-                        <h5 class="my-1">ACADÉMICAS</h5>
-                        <ul>
-                            <li>Aula makersteam</li>
-                            <li>Biblioteca</li>
-                            <li>Laboratorio de Ciencias</li>
-                            <li>Laboratorios de Computo</li>
-                            <li>Sala de Artes y Música</li>                           
-                            <li>Salas multimedia y usos múltiples</li>
-                            <li>Sala de estimulación temprana (Prekinder)</li>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row pb-5 d-flex align-items-center">
+                <div class="col-12 col-lg-6 text-left align-self-center ">
+                    <div class="text-justify">
+                        <h5 class="my-1 text-center">ACADÉMICAS</h5>
+                        <ul class="list-group list-group-flush mb-2">
+                            <li class="list-group-item">Aula makersteam</li>
+                            <li class="list-group-item">Biblioteca</li>
+                            <li class="list-group-item">Laboratorio de Ciencias</li>
+                            <li class="list-group-item">Laboratorios de Computo</li>
+                            <li class="list-group-item">Sala de Artes y Música</li>                           
+                            <li class="list-group-item">Salas multimedia y usos múltiples</li>
+                            <li class="list-group-item">Sala de estimulación temprana (Prekinder)</li>
                         </ul>
-                    <h6>Todas nuestras Aulas están Climatizadas para mayor comodidad de los alumnos.</h6>
-
-                        <h5 class="mt-3 mb-1">SERVICIOS</h5>
-                        <ul>
-                            <li>Enfermería</li>
-                            <li>Paramédico</li>
-                            <li>Cafeterías</li>
-                            <li>Sistema de Seguridad de Circuito Cerrado</li>
-                        </ul>
-
-                        <h5 class="my-1">DEPORTIVAS</h5>
-                            <ul>
-                                <li>Alberca semi-olímpica (25 metros)</li>
-                                <li>Alberca recreativa</li>
-                                <li>Cancha techada de fútbol rápido con pasto sintético</li>
-                                <li>Cancha de voleibol / básquetbol</li>
-                                <li>Cancha de frontenis</li>
-                                <li>Canchas de Squash</li>
-                                <li>Áreas verdes</li>
-                                <li>Áreas de juegos para Primaria</li>
-                                <li>Área de juegos para Kinder y Prekinder</li>
-                            </ul>
-
-
+                        <h6>Todas nuestras Aulas están Climatizadas para mayor comodidad de los alumnos.</h6>
                     </div>
                 </div>
+                <div class="col-12 col-lg-6 ">
+                    <img src="images/campus1.webp" class="img-fluid rounded-sm" alt="Responsive image">
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <div class="container">
+            <div class="row pb-5 pt-5">
                 <div class="col-12 col-lg-6 align-self-center">
-                    <img src="images/campus1.jpg" class="img-fluid" alt="Responsive image">
+                    <img src="images/campus1.webp" class="img-fluid" alt="Responsive image">
+                </div>
+                <div class="col-12 col-lg-6 text-left align-self-center">
+                    <h5 class="mt-3 mb-1 text-center">SERVICIOS</h5>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Enfermería</li>
+                        <li class="list-group-item">Paramédico</li>
+                        <li class="list-group-item">Cafeterías</li>
+                        <li class="list-group-item">Sistema de Seguridad de Circuito Cerrado</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row pb-5 pt-5">
+                
+                <div class="col-12 col-lg-6 text-left align-self-center">
+                        <h5 class="my-1 text-center">DEPORTIVAS</h5>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Alberca semi-olímpica (25 metros)</li>
+                            <li class="list-group-item">Alberca recreativa</li>
+                            <li class="list-group-item">Cancha techada de fútbol rápido con pasto sintético</li>
+                            <li class="list-group-item">Cancha de voleibol / básquetbol</li>
+                            <li class="list-group-item">Cancha de frontenis</li>
+                            <li class="list-group-item">Canchas de Squash</li>
+                            <li class="list-group-item">Áreas verdes</li>
+                            <li class="list-group-item">Áreas de juegos para Primaria</li>
+                            <li class="list-group-item">Área de juegos para Kinder y Prekinder</li>
+                        </ul>
+                </div>
+                <div class="col-12 col-lg-6 align-self-center">
+                    <img src="images/campus1.webp" class="img-fluid" alt="Responsive image">
                 </div>
             </div>
         </div>
