--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
                     </a>
                     <a class="fb-ic" href="https://www.youtube.com/channel/UCN3pK19VnqY9pU1OlUkNBxw" target="_blank">
                         <i class="fab fa-youtube fa-s white-text mr-md-4 mr-3 fa-1x"></i>
+                    </a>
                     <a class="fb-ic" href="https://twitter.com/MXanglo" target="_blank">
                         <i class="fab fa-twitter-square fa-s white-text mr-md-4 mr-3 fa-1x"></i>
                     </a>
+                    <a href="https://wa.link/xr1quy"><i class="fab fa-whatsapp fa-s mr-md-4 mr-3 fa-1x"></i>
                     </a>
-                    <a href="https://wa.link/xr1quy"><i class="fab fa-whatsapp mx-2 mr-md-4 mr-3 fa-1x">
-                        </i></a>
-                    <a href="tel:+524431283102"><small></small></a>
                     <a href="https://anglo.algebraix.com/" target="_blank">
-                        <i class="fas fa-desktop fa-s white-text mr-md-2 mr-3 fa-1x "></i><small>Algebraix</small> 
+                        <i class="fa fa-desktop fa-s white-text mr-md-2 mr-3 fa-1x "></i><small>Algebraix</small> 
                     </a>
 
                 </div>
