--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                                 <a class="dropdown-item" href="primaria.html">PRIMARIA</a>
                                 <a class="dropdown-item" href="secundaria.html">SECUNDARIA</a>
                                 <a class="dropdown-item" href="bachillerato.html">BACHILLERATO</a>
+                                <a class="dropdown-item" href="extraescolares.html">EXTRAESCOLARES</a>
                             </div>
                         </li>
                         <li class="nav-item">
