--- a/campus.html
+++ b/campus.html
@@ -81,7 +81,11 @@
                             <a class="dropdown-item" href="primaria.html">PRIMARIA</a>
                             <a class="dropdown-item" href="secundaria.html">SECUNDARIA</a>
                             <a class="dropdown-item" href="bachillerato.html">BACHILLERATO</a>
+                            <a class="dropdown-item" href="extraescolares.html">EXTRAESCOLARES</a>
                         </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="exalumnos.html">EXALUMNOS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="inscripciones.html">INSCRIPCIONES</a>
@@ -94,7 +98,6 @@
         </nav>
     </header>
 <!-- HEADER-->
-
 <!--main-->
     <section id="main">
         <div class="container">
