--- a/prekinder.html
+++ b/prekinder.html
@@ -78,7 +78,11 @@
                             <a class="dropdown-item" href="primaria.html">PRIMARIA</a>
                             <a class="dropdown-item" href="secundaria.html">SECUNDARIA</a>
                             <a class="dropdown-item" href="bachillerato.html">BACHILLERATO</a>
+                            <a class="dropdown-item" href="extraescolares.html">EXTRAESCOLARES</a>
                         </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="exalumnos.html">EXALUMNOS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="inscripciones.html">INSCRIPCIONES</a>
