--- a/primaria.html
+++ b/primaria.html
@@ -19,8 +19,8 @@
 
 
 <body>
-     <!--HEADER  -->
-     <header>
+    <!--HEADER  -->
+    <header>
         <div id="info" class="text-center">
             <div class="p-1">
                 <a class="fb-ic" href="https://www.facebook.com/colegioanglolzc/" target="_blank">
@@ -81,7 +81,11 @@
                             <a class="dropdown-item" href="primaria.html">PRIMARIA</a>
                             <a class="dropdown-item" href="secundaria.html">SECUNDARIA</a>
                             <a class="dropdown-item" href="bachillerato.html">BACHILLERATO</a>
+                            <a class="dropdown-item" href="extraescolares.html">EXTRAESCOLARES</a>
                         </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="exalumnos.html">EXALUMNOS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="inscripciones.html">INSCRIPCIONES</a>
