actualizacion todas las paginas de info contacto

--- a/extraescolares.html
+++ b/extraescolares.html
@@ -132,104 +132,110 @@
       </div>
     </div>
   </div>
-  <!--Extensiones niveles-->
-  <div id="nav" class="nav pt-3">
-    <div class="container">
-      <div class="row p-2 d-flex justify-content-center">
-        <a class="fb-ic" href="https://www.facebook.com/colegioanglolzc/">
-          <i class="fab fa-facebook-f fa-s white-text mr-md-5 mr-3 fa-2x px-2"></i>
-        </a>
-        <a class="fb-ic" href="https://www.instagram.com/colegioanglolzc/">
-          <i class="fab fa-instagram fa-s white-text mr-md-5 mr-3 fa-2x px-2"></i>
-        </a>
-        <a class="fb-ic" href="https://twitter.com/MXanglo">
-          <i class="fab fa-twitter-square fa-s white-text mr-md-5 mr-3 fa-2x px-2"></i>
-        </a>
-        <a class="fb-ic" href="https://www.youtube.com/channel/UCN3pK19VnqY9pU1OlUkNBxw">
-          <i class="fab fa-youtube fa-s white-text mr-md-5 mr-3 fa-2x px-2"></i>
-        </a>
+  
+    <!--Extensiones niveles-->
+    <div id="nav" class="nav pt-3" >
+      <div class="container">
+          <div class="row p-2 d-flex justify-content-center">
+              <a class="fb-ic" href="https://www.facebook.com/colegioanglolzc/">
+                  <i class="fab fa-facebook-f fa-s white-text mr-md-5 mr-3 fa-2x px-2"></i>
+              </a>
+              <a class="fb-ic" href="https://www.instagram.com/colegioanglolzc/">
+                  <i class="fab fa-instagram fa-s white-text mr-md-5 mr-3 fa-2x px-2"></i>
+              </a>
+              <a class="fb-ic" href="https://www.youtube.com/channel/UCN3pK19VnqY9pU1OlUkNBxw">
+                  <i class="fab fa-youtube fa-s white-text mr-md-5 mr-3 fa-2x px-2"></i>
+              </a>
+              <a class="fb-ic" href="https://wa.link/xr1quy">
+                  <i class="fab fa-whatsapp fa-s white-text mr-md-5 mr-3 fa-2x px-2"></i>
+              </a>
+              <a class="fb-ic" href="https://twitter.com/MXanglo">
+                  <i class="fab fa-twitter-square fa-s white-text mr-md-5 mr-3 fa-2x px-2"></i>
+              </a>
+          </div>
       </div>
-    </div>
   </div>
 
   <section id="contacto">
-    <div class="container">
-      <div class="row pt-0 pb-5 align-items-center">
-        <div class="col-12 col-md-6 pb-1 text-center">
-          <div class="pt-2">
-            <h4>Encuéntranos</h4>
-            <h6 class="font-weight-normal"> Av. 5 de Febrero 1007, Valle del Tecnológico,<br>
-              C.P.60950
-              Lázaro
-              Cárdenas, Mich.</h6>
+      <div class="container">
+          <div class="row pt-0 pb-5 align-items-center">
+              <div class="col-12 col-md-6 pb-1 text-center">
+                  <div class="pt-2">
+                      <h2>Visítanos en</h2>
+                      Av. 5 de Febrero 1007, Valle del Tecnológico,<br>
+                          C.P.60950, LázaroCárdenas, Mich. <br>
+                      <!-- <i class="fa fa-location-arrow" aria-hidden="true" class=""></i><a href="" class="text-white mx-2">Maps</a><br> -->
+                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1128.2842536357837!2d-102.22782735715866!3d17.97498034630098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84315ce939092507%3A0x2aec891bf28bcaa9!2sColegio%20Anglo%20Buganvilias!5e0!3m2!1ses-419!2smx!4v1615216057195!5m2!1ses-419!2smx" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              
+                  </div>
+              </div>
+              <div class="col-12 col-md-6 pt-2 text-center">
+  
+                  <h2>Contáctanos</h2>
+                  (753) 537 7274 | 
+                  (753) 537 6659 <br>
+                  (753) 537 7275 | 
+                  (753) 537 1210
+              <div>
+                  
+                  <div class="text-center px-3">
+                      <a href="https://wa.link/xr1quy"><i class="fab fa-whatsapp mx-2 text-white"></i></a>753 119 62 82
+                  </div>
+              </div>
+              </div>
           </div>
-        </div>
-        <div class="col-12 col-md-6 pt-2 text-center">
-
-          <h4>Teléfonos</h4>
-          (753) 537 7274 |
-          (753) 537 6659 |
-          (753) 537 7275 |
-          (753) 537 1210
-          <div>
-            <div class="text-center px-3">
-              <i class="fab fa-whatsapp"></i> 753-119-62-82
-            </div>
-          </div>
-        </div>
       </div>
-    </div>
   </section>
 
   <section id="extensiones">
-    <div class="container pb-4">
-      <div class="row">
-        <div class="col-12 col-md-6 col-lg-3 text-center pt-1">
-          <h5>Kindergarten</h5>
-          <div class="flexbox p-1">
-            <img src="images/phone.svg" alt="" style="max-width: 7%" class="mr-2">
-            <a>Ext. 121</a>
+      <div class="container pb-4">
+          <div class="row">
+              <div class="col-12 col-md-6 col-lg-3 text-center pt-1">
+                  <h5>Kindergarten</h5>
+                  <div class="flexbox p-1">
+                      <img src="images/phone.svg" alt="" style="max-width: 7%" class="mr-2">
+                      <a>Ext. 121</a>
+                  </div>
+                  <div class="flexbox p-1">
+                      <img src="images/email.svg" alt="" style="max-width: 7%" class="mr-2">
+                      <a>kindergarten@colegioanglo.mx</a>
+                  </div>
+              </div>
+              <div class="col-12 col-md-6 col-lg-3 text-center pt-1">
+                  <h5>Primaria</h5>
+                  <div class="flexbox p-1">
+                      <img src="images/phone.svg" alt="" style="max-width: 7%" class="mr-2">
+                      <a>Ext. 131</a>
+                  </div>
+                  <div class="flexbox p-1">
+                      <img src="images/email.svg" alt="" style="max-width: 7%" class="mr-2">
+                      <a>primaria@colegioanglo.mx</a>
+                  </div>
+              </div>
+              <div class="col-12 col-md-6 col-lg-3 text-center pt-1">
+                  <h5>Secundaria</h5>
+                  <div class="flexbox p-1">
+                      <img src="images/phone.svg" alt="" style="max-width: 7%" class="mr-2">
+                      <a>Ext. 111</a>
+                  </div>
+                  <div class="flexbox p-1 ">
+                      <img src="images/email.svg" alt="" style="max-width: 7%" class="mr-2">
+                      <a>secundaria@colegioanglo.mx</a>
+                  </div>
+              </div>
+              <div class="col-12 col-md-6 col-lg-3 text-center pt-1">
+                  <h5>Bachillerato</h5>
+                  <div class="flexbox p-1">
+                      <img src="images/phone.svg" alt="" style="max-width: 7%" class="mr-2">
+                      <a>Ext. 101</a>
+                  </div>
+                  <div class="flexbox p-1">
+                      <img src="images/email.svg" alt="" style="max-width: 7%" class="mr-2">
+                      <a>prepa@colegioanglo.mx</a>
+                  </div>
+              </div>
           </div>
-          <div class="flexbox p-1">
-            <img src="images/email.svg" alt="" style="max-width: 7%" class="mr-2">
-            <a>kindergarten@colegioanglo.mx</a>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-3 text-center pt-1">
-          <h5>Primaria</h5>
-          <div class="flexbox p-1">
-            <img src="images/phone.svg" alt="" style="max-width: 7%" class="mr-2">
-            <a>Ext. 131</a>
-          </div>
-          <div class="flexbox p-1">
-            <img src="images/email.svg" alt="" style="max-width: 7%" class="mr-2">
-            <a>primaria@colegioanglo.mx</a>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-3 text-center pt-1">
-          <h5>Secundaria</h5>
-          <div class="flexbox p-1">
-            <img src="images/phone.svg" alt="" style="max-width: 7%" class="mr-2">
-            <a>Ext. 111</a>
-          </div>
-          <div class="flexbox p-1 ">
-            <img src="images/email.svg" alt="" style="max-width: 7%" class="mr-2">
-            <a>secundaria@colegioanglo.mx</a>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-3 text-center pt-1">
-          <h5>Bachillerato</h5>
-          <div class="flexbox p-1">
-            <img src="images/phone.svg" alt="" style="max-width: 7%" class="mr-2">
-            <a>Ext. 101</a>
-          </div>
-          <div class="flexbox p-1">
-            <img src="images/email.svg" alt="" style="max-width: 7%" class="mr-2">
-            <a>prepa@colegioanglo.mx</a>
-          </div>
-        </div>
       </div>
-    </div>
   </section>
   <!--Extensiones niveles-->
 
