--- a/modelo.html
+++ b/modelo.html
@@ -137,17 +137,17 @@
             <div class="row pt-0 pb-5 align-items-center">
                 <div class="col-12 col-md-6 pb-1 text-center">
                     <div class="pt-2">
-                        <h4>Visítanos en</h4>
+                        <h2>Visítanos en</h2>
                         Av. 5 de Febrero 1007, Valle del Tecnológico,<br>
                             C.P.60950, LázaroCárdenas, Mich. <br>
                         <!-- <i class="fa fa-location-arrow" aria-hidden="true" class=""></i><a href="" class="text-white mx-2">Maps</a><br> -->
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1128.2842536357837!2d-102.22782735715866!3d17.97498034630098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84315ce939092507%3A0x2aec891bf28bcaa9!2sColegio%20Anglo%20Buganvilias!5e0!3m2!1ses-419!2smx!4v1615216057195!5m2!1ses-419!2smx" width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1128.2842536357837!2d-102.22782735715866!3d17.97498034630098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84315ce939092507%3A0x2aec891bf28bcaa9!2sColegio%20Anglo%20Buganvilias!5e0!3m2!1ses-419!2smx!4v1615216057195!5m2!1ses-419!2smx" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 
                     </div>
                 </div>
                 <div class="col-12 col-md-6 pt-2 text-center">
     
-                    <h4>Teléfonos</h4>
+                    <h2>Contáctanos</h2>
                     (753) 537 7274 | 
                     (753) 537 6659 <br>
                     (753) 537 7275 | 
