--- a/exalumnos.html
+++ b/exalumnos.html
@@ -97,41 +97,45 @@
   </header>
 <!-- HEADER-->
 
-  <div class="text-center mt-5 mb-3">
-    <h1 class="text-center">Exalumnos</h1>
-    <small>Aquí encuentras las etiquetas para el nivel correspondiente.</small>
-  </div>
+    <section id="main">
+        <div class="container">
+            <div class="row pb-5 pt-5 d-flex align-items-center">
+                <div class="col-12 col-lg-6 text-left align-self-center">
+                    <div class="text-uppercase">
+                        <small>Para dejar huella lo mejor</small>
+                        <h2>Anglo</h2>
+                    </div>
+                    <div>
+                            <h5 class="font-weight-normal">La etapa Preuniversitaria forma parte importante para un gran futuro.</h5>
+                        </div>
+                    <div class="text-justify">
+                        <p>
+                        Impulsamos el desarrollo de los alumnos con base en el aprendizaje significativo, en donde los jóvenes obtienen
+                        herramientas académicas y tecnológicas para el desarrollo de las habilidades y destrezas que ayudan en su futuro
+                        personal, universitario y profesional.</p>
+                        <p>Formación colaborativa, aprendizaje por competencias, aprendizaje basado en retos y aprendizaje por proyectos así como
+                        trabajo comunitario son pilares en Bachillerato Anglo.</p>
+                        <p>Parte fundamental es la promoción de la conciencia ecológica, mediante acciones y experiencias formativas concretas
+                        nuestros alumnos fortalecen hábitos y conductas amigables con el medio ambiente.</p>
+                        <p>Bachillerato cuenta con apoyo Psicopedagógico, Plan de Vida y Carrera y Escuela para Padres.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 ">
+                    <img src="images/prepamain.jpg" class="img-fluid rounded-sm" alt="Responsive image">
+                </div>
+            </div>
+        </div>
+    </section>
 
-
-
-  <div class="container">
-    <div class="row">
-      <div class="card mx-5" style="width: 18rem;">
-        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <div class="container">
+        <div class="row my-5 py-5">
+            <div class="wrapper">
+                <div class="col iframe-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/KSwxK4QTiDs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="card mx-5" style="width: 18rem;">
-        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card mx-5" style="width: 18rem;">
-        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card mx-5" style="width: 18rem;">
-        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
     </div>
-  </div>
 
 
     <!--Extensiones niveles-->
