responsive video prepa

--- a/bachillerato.html
+++ b/bachillerato.html
@@ -200,7 +200,7 @@
         <div class="row my-5 py-5">
             <div class="wrapper">
                 <div class="col iframe-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/9Zqc6sXTWqU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="videos" width="560" height="315" src="https://www.youtube.com/embed/9Zqc6sXTWqU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
