--- a/extraescolares.html
+++ b/extraescolares.html
@@ -97,13 +97,106 @@
   </header>
 <!-- HEADER-->
 
+
+
   <div class="text-center mt-5 mb-3">
-    <h1 class="text-center">extraescolares</h1>
+    <h1 class="text-center">ACTIVIDADES EXTRAESCOLARES</h1>
     <small>Aquí encuentras las etiquetas para el nivel correspondiente.</small>
   </div>
 
+    <div class="container">
+        <div class="row pb-5 pt-3 d-flex align-items-center">              
+            <div class="col-12 col-lg-6 text-left align-self-center">
+                <div class="text-justify">
+                <p>
+                    Fortalecemos los procesos de aprendizaje en los adolescentes, fomentando su capacidad de análisis, reflexión y 
+                    creatividad, acompañándolos en el desarrollo de su identidad personal y social a fin de lograr el dominio de competencias, 
+                    conocimientos y actitudes para la vida.</p> 
+                    <p>Hacemos énfasis en la <strong>formación colaborativa</strong>, <strong>aprendizaje por competencias</strong>,<strong> basado en retos </strong> y a través de
+                    <strong>proyectos de impacto social</strong> mediante el trabajo comunitario y el voluntariado.</p>
+                    <p>El aprendizaje de las <strong>TIC's</strong> lo promovemos a través del área de informática, trabajando con programación y manejo de bases
+                    de datos por medio de la plataforma virtual.</p>
+                    <p>Secundaria destaca por su alto nivel de competitividad en disciplinas deportivas como Fútbol, Básquetbol, Atletismo; y académicas como Olimpiadas Nacionales de 
+                    Talentos de Física, Olimpiada de Matemáticas y Ortografía obteniendo preseas doradas en las justas locales, regionales, estatales y nacionales.</p>
+                </div>
+            
+            </div>
+            <div class="col-12 col-lg-6 text-center">
+                <img src="images/steamlogo.png" class="img-fluid rounded-sm" alt="Responsive image">
+            </div>
+        </div>
+    
+    </div>
 
 
+  <section class="text-center my-3">
+        <!-- Section heading -->
+        <div class=" my-5 pb-3">
+            <h2 class="h1-responsive font-weight-bold">Disfruta de tus deportes favoritos</h2>
+        </div>
+        <div class="container">
+            <!-- Grid row -->
+            <div class="row pb-3">
+                <!-- Grid column -->
+                <div class="col-6 col-md">
+                    <img src="images/loupe.svg" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Indagadores</h5>
+                    <p class="grey-text mb-md-0 mb-5">Desarrollan su curiosidad natural y demuestran autonomía en su
+                        aprendizaje.</p>
+                </div>
+                <!-- Grid column -->
+                <!-- Grid column -->
+                <div class="col-6 col-md">
+                    <img src="images/help.svg" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Informados e Instruidos</h5>
+                    <p class="grey-text mb-md-0 mb-5">Exploran conceptos, ideas y cuestiones de importancia local y mundial.
+                    </p>
+                </div>
+                <!-- Grid column -->
+                <!-- Grid column -->
+                <div class="col-6 col-md">
+                    <img src="images/innovation.svg" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Pensadores</h5>
+                    <p class="grey-text mb-0 mb-3">Aplican, por propia iniciativa, sus habilidades intelectuales de manera
+                        crítica y creativa</p>
+                </div>
+                <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
+        </div>
+        <div class="container">
+            <!-- Grid row -->
+            <div class="row">
+                <!-- Grid column -->
+                <div class="col-6 col-md">
+                    <img src="images/charity.svg" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Solidarios</h5>
+                    <p class="grey-text mb-md-0 mb-5">Muestran empatía, sensibilidad y respeto por las necesidades y
+                    sentimientos de los demás.</p>
+                </div>
+                <!-- Grid column -->
+                <!-- Grid column -->
+                <div class="col-6 col-md">
+                    <img src="images/man-jumping-up.svg" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Audaces</h5>
+                    <p class="grey-text mb-md-0 mb-5">Exploran nuevos roles, ideas y estrategias.</p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-6 col-md">
+                    <img src="images/openmind.svg" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">De Mentalidad abierta</h5>
+                    <p class="grey-text mb-0 mb-3">Entienden y aprecian las perspectivas, valores y tradiciones de otras 
+                        personas y comunidades.</p>
+                </div>
+                <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
+        </div>
+    </section>
+
+<!-- 
   <div class="container">
     <div class="row">
       <div class="card mx-5" style="width: 18rem;">
@@ -131,7 +224,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   
     <!--Extensiones niveles-->
     <div id="nav" class="nav pt-3" >
