--- a/inscripciones.html
+++ b/inscripciones.html
@@ -102,37 +102,75 @@
     <small>Aquí encuentras las etiquetas para el nivel correspondiente.</small>
   </div>
 
+    <!--OTO-->
+    <section class="text-center my-5">
+        <!-- Section heading -->
+        <div class=" my-5">
+            <h2 class="h1-responsive font-weight-bold">Anatomía IB</h2>
+            <p class="page-description text-center">Cualidades que el alumno adquiere en su formación IB.</p>
+         </div>
+        <div class="container">
+            <!-- Grid row -->
+            <div class="row pb-3">
+                <!-- Grid column -->
+                <div class="col-6 col-md">
+                    <img src="images/loupe.svg" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Indagadores</h5>
+                    <p class="grey-text mb-md-0 mb-5">Desarrollan su curiosidad natural y demuestran autonomía en su
+                        aprendizaje.</p>
+                </div>
+                <!-- Grid column -->
+                <!-- Grid column -->
+                <div class="col-6 col-md">
+                    <img src="images/help.svg" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Informados e Instruidos</h5>
+                    <p class="grey-text mb-md-0 mb-5">Exploran conceptos, ideas y cuestiones de importancia local y mundial.
+                    </p>
+                </div>
+                <!-- Grid column -->
+                <!-- Grid column -->
+                <div class="col-6 col-md">
+                    <img src="images/innovation.svg" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Pensadores</h5>
+                    <p class="grey-text mb-0 mb-3">Aplican, por propia iniciativa, sus habilidades intelectuales de manera
+                        crítica y creativa</p>
+                </div>
+                <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
+        </div>
+        <div class="container">
+            <!-- Grid row -->
+            <div class="row">
+                <!-- Grid column -->
+                <div class="col-6 col-md">
+                    <img src="images/charity.svg" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Solidarios</h5>
+                    <p class="grey-text mb-md-0 mb-5">Muestran empatía, sensibilidad y respeto por las necesidades y
+                    sentimientos de los demás.</p>
+                </div>
+                <!-- Grid column -->
+                <!-- Grid column -->
+                <div class="col-6 col-md">
+                    <img src="images/man-jumping-up.svg" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Audaces</h5>
+                    <p class="grey-text mb-md-0 mb-5">Exploran nuevos roles, ideas y estrategias.</p>
+                </div>
+                <!-- Grid column -->
 
-
-  <div class="container">
-    <div class="row">
-      <div class="card mx-5" style="width: 18rem;">
-        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <!-- Grid column -->
+                <div class="col-6 col-md">
+                    <img src="images/openmind.svg" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">De Mentalidad abierta</h5>
+                    <p class="grey-text mb-0 mb-3">Entienden y aprecian las perspectivas, valores y tradiciones de otras 
+                        personas y comunidades.</p>
+                </div>
+                <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
         </div>
-      </div>
-      <div class="card mx-5" style="width: 18rem;">
-        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card mx-5" style="width: 18rem;">
-        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card mx-5" style="width: 18rem;">
-        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
+    </section>
+    <!--OTO-->
 
     <!--Extensiones niveles-->
     <div id="nav" class="nav pt-3" >
